--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading pipeline components...: 100%|██████████| 7/7 [00:00<00:00,  8.80it/s]\n"
+      "Loading pipeline components...: 100%|██████████| 7/7 [00:01<00:00,  4.33it/s]\n"
      ]
     }
    ],
@@ -34,23 +34,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40/40 [02:44<00:00,  4.12s/it]\n"
+      "100%|██████████| 40/40 [00:05<00:00,  7.02it/s]\n"
      ]
     }
    ],
    "source": [
     "# Loading the initial image from the specified path\n",
-    "init_image = load_image(\"dog/alvan-nee-9M0tSjb-cpA-unsplash.jpeg\")\n",
+    "init_image = load_image(\"dog/alvan-nee-bQaAJCbNq3g-unsplash.jpeg\").resize((512, 512))\n",
     "\n",
     "# Defining the prompt for generating the image\n",
-    "prompt = \"A photo of sks dog in a bucket\"\n",
+    "prompt = \"A highly detailed portrait of a dog wearing stylish round glasses, sitting elegantly, with soft lighting and a warm color palette, photorealistic, 8K resolution, intricate fur texture, and a charming expression.\"\n",
     "\n",
     "# Generating the new image using the pipeline by passing the prompt and initial image\n",
     "# The generated image is extracted from the pipeline's output (first image from the list)\n",
@@ -65,13 +65,6 @@
     "# Saving the image grid comparison (original vs generated) to the disk\n",
     "image_grid.save(\"Given-image-vs-Generated-Image.png\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
